--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,20 @@
-# Python
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-*.so
+
+# Virtual Environment
+venv/
+env/
+ENV/
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Distribution / packaging
 .Python
 build/
 develop-eggs/
@@ -20,27 +32,18 @@ wheels/
 .installed.cfg
 *.egg
 
-# Virtual Environment
-venv/
-env/
-ENV/
-
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# Distribution
-dist/
-build/
-*.egg-info/
-
-# Testing
-.coverage
-test.py
+# Unit test / coverage reports
 htmlcov/
-.pytest_cache/ 
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
 
-# PyPI
-.pypirc
+# Environments
+.env
+.venv
